--- a/views/report.xml
+++ b/views/report.xml
@@ -186,6 +186,17 @@
             <field name="paperformat_id" ref="is_plastigray.is_cout_paperformat"/>
         </record>
 
+        <report 
+            id="report_pricelist_versions" 
+            string="Liste des prix" 
+            model="product.pricelist.version" 
+            report_type="qweb-pdf"
+            name="is_plastigray.report_pricelist_version" 
+            file="is_plastigray.report_pricelist_version" 
+        />
+        <record id="report_pricelist_versions" model="ir.actions.report.xml">
+            <field name="paperformat_id" ref="is_plastigray.pricelist_version_paperformat"/>
+        </record>
 
 
 
