--- a/views/report_pricelist_version.xml
+++ b/views/report_pricelist_version.xml
@@ -111,7 +111,12 @@
                                         <th class="text-left"   style="vertical-align:top">Article</th>
                                         <th class="text-left"   style="vertical-align:top">Séquence</th>
                                         <th class="text-right"  style="vertical-align:top">Quantité min.</th>
-                                        <th class="text-left"   style="vertical-align:top">Unité d'achat</th>
+                                        <t t-if="o.pricelist_id.type=='purchase'">
+                                            <th class="text-left"   style="vertical-align:top">Unité d'achat</th>
+                                        </t>
+                                        <t t-if="o.pricelist_id.type!='purchase'">
+                                            <th class="text-left"   style="vertical-align:top">Unité</th>
+                                        </t>
                                         <th class="text-right"  style="vertical-align:top">Prix</th>
                                         <th class="text-center" style="vertical-align:top">Date début</th>
                                         <th class="text-center" style="vertical-align:top">Date fin</th>
@@ -122,7 +127,12 @@
                                         <td class="text-left   nowrap"> <span t-field="l.product_id"/> </td>
                                         <td class="text-left   nowrap"> <span t-field="l.sequence"/>  </td>
                                         <td class="text-right  nowrap"><t t-esc='"{:,.4f}".format(l.min_quantity).replace(","," ").replace(".",",")'/></td>
-                                        <td class="text-left   nowrap"> <span t-field="l.product_po_uom_id"/>  </td>
+                                        <t t-if="o.pricelist_id.type=='purchase'">
+                                            <td class="text-left   nowrap"> <span t-field="l.product_po_uom_id"/>  </td>
+                                        </t>
+                                        <t t-if="o.pricelist_id.type!='purchase'">
+                                            <td class="text-left   nowrap"> <span t-field="l.product_uom_id"/>  </td>
+                                        </t>
                                         <td class="text-right  nowrap"><t t-esc='"{:,.4f}".format(l.price_surcharge).replace(","," ").replace(".",",")'/></td>
                                         <td class="text-center nowrap"> <span t-field="l.date_start"/>  </td>
                                         <td class="text-center nowrap"> <span t-field="l.date_end"/>  </td>
