Change on stock report header, Improve audit log view.

--- a/views/report_stockmovement_tree.xml
+++ b/views/report_stockmovement_tree.xml
@@ -3,7 +3,7 @@
 <data>
 <template id="report_stockdetails_tree">
 	<t t-call="report.html_container">
-    <t t-call="report.external_layout">
+    <t t-call="report.internal_layout">
         <div class="page">
             <div class="oe_structure"/>
 
