--- a/views/report_bon_transfert.xml
+++ b/views/report_bon_transfert.xml
@@ -67,7 +67,7 @@
 
                 <div class="row">
                     <div class="col-xs-4  text-left">
-                        <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 60px;"/>
+                        <img t-if="company.is_logo" t-att-src="'data:image/png;base64,%s' % company.is_logo" style="max-height: 60px;"/>
                         <div class="expediteur">
                             <div>Expéditeur : </div>
                             <b><div t-field="company.name"/></b>
