--- a/views/report_cde_ouverte_fournisseur.xml
+++ b/views/report_cde_ouverte_fournisseur.xml
@@ -72,7 +72,7 @@
             <div class="header">
                 <div class="row">
                     <div class="col-xs-4  text-left">
-                        <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 60px;"/>
+                        <img t-if="company.is_logo" t-att-src="'data:image/png;base64,%s' % company.is_logo" style="max-height: 60px;"/>
                         <div class="livraison">
                             Adresse de livraison : <br />
                             <span t-field="company.name"/> <span t-field="company.street"/><br />
