--- a/views/report_liste_servir.xml
+++ b/views/report_liste_servir.xml
@@ -78,7 +78,7 @@
             <div class="header">
                 <div class="row">
                     <div class="col-xs-3  text-left">
-                        <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 60px;"/>
+                        <img t-if="company.is_logo" t-att-src="'data:image/png;base64,%s' % company.is_logo" style="max-height: 60px;"/>
                     </div>
                     <div class="col-xs-9">
                         <div class="titre">
