--- a/views/report_plan_de_charge.xml
+++ b/views/report_plan_de_charge.xml
@@ -119,7 +119,7 @@
                         <div class="page">
                             <table style="width:100%" class="entete">
                                 <tr>
-                                    <td style="width:20%;font-size:1pt;" rowspan="3"><img t-att-src="'data:image/png;base64,%s' % res_company.logo" style="height: 60px;"/></td>
+                                    <td style="width:20%;font-size:1pt;" rowspan="3"><img t-att-src="'data:image/png;base64,%s' % res_company.is_logo" style="height: 60px;"/></td>
                                     <td style="width:20%" rowspan="1">Processus Logistique</td>
                                     <td style="width:20%" rowspan="1">FO-1-LOG-1</td>
                                 </tr>
@@ -282,7 +282,7 @@
                         <div class="page">
                             <table style="width:100%" class="entete">
                                 <tr>
-                                    <td style="width:20%;font-size:1pt;" rowspan="3"><img t-att-src="'data:image/png;base64,%s' % res_company.logo" style="height: 60px;"/></td>
+                                    <td style="width:20%;font-size:1pt;" rowspan="3"><img t-att-src="'data:image/png;base64,%s' % res_company.is_logo" style="height: 60px;"/></td>
                                     <td style="width:20%" rowspan="1">Processus Logistique</td>
                                     <td style="width:20%" rowspan="1">FO-1-LOG-1</td>
                                 </tr>
