--- a/views/report.xml
+++ b/views/report.xml
@@ -235,5 +235,18 @@
             <field name="paperformat_id" ref="is_plastigray.document_fabrication_landscape_paperformat"/>
         </record>
 
+        <report 
+            string="Feuilles Inventaire" 
+            id="report_feuilles_inventaire_report" 
+            model="is.inventaire.feuille" 
+            report_type="qweb-pdf"
+            name="is_plastigray.report_feuilles_inventaire" 
+            file="is_plastigray.report_feuilles_inventaire" 
+        />
+        
+        <record id="report_feuilles_inventaire_report" model="ir.actions.report.xml">
+            <field name="paperformat_id" ref="is_plastigray.document_fabrication_landscape_paperformat"/>
+        </record>
+
     </data>
 </openerp>
