--- a/views/report_is_plaquette_etalon.xml
+++ b/views/report_is_plaquette_etalon.xml
@@ -31,35 +31,53 @@
 		                </div>
 			            <table class="table table-condensed" width="100%" style="border:solid 0px white;margin-bottom:0px;border-bottom:none;">
 			                <tr>
-			                    <td class="text-left" width="20%"><b>N° d'identification</b></td>
-			                    <td class="text-left" width="30%"></td>
-			                    <td class="text-left" width="20%"></td>
-			                    <td class="text-left" width="30%"></td>
-			                </tr>
-			                <tr>
-			                    <td width="20%"><b>Désignation</b></td>
-			                    <td width="30%"><span t-field="o.designation"/></td>
-			                    <td width="20%"><b>Marque</b></td>
-			                    <td width="30%"></td>
-			                </tr>
-			                <tr>
-			                    <td width="20%"><b>Site</b></td>
-			                    <td width="30%"><span t-field="o.site_id.name"/></td>
-			                    <td width="20%"></td>
-			                    <td width="30%"></td>
-			                </tr>
-			                <tr> 
-			                    <td width="20%"><b>N° Série</b></td>
-			                    <td width="30%"></td>
-			                    <td width="20%"><b>Périodicité</b></td>
-			                    <td width="30%"><span t-field="o.periodicite"/></td>
-			                </tr>
-			                <tr>
-			                    <td width="20%"><b>Date de réception</b></td>
-			                    <td width="30%"><span t-field="o.date_reception"/></td>
-			                    <td width="20%"></td>
-			                    <td width="30%"></td>
-			                </tr>
+                                <td class="text-left" width="20%"><b>Code PG</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.code_pg"/></td>
+                                <td class="text-left" width="20%"><b>Désignation</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.designation"/></td>
+                            </tr>
+                            <tr>
+                                <td class="text-left" width="20%"><b>Fabricant</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.fabriquant_id.name"/></td>
+                                <td class="text-left" width="20%"><b>Date de réception</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.date_reception"/></td>
+                            </tr>
+                            <tr>
+                                <td class="text-left" width="20%"><b>Site d'affectation</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.site_id.name"/></td>
+                                <td class="text-left" width="20%"><b>Lieu de stockage</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.lieu_stockage"/></td>
+                            </tr>
+                            <tr>
+                                <td class="text-left" width="20%"><b>Périodicité</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.periodicite"/></td>
+                                <td class="text-left" width="20%"><b>Type de contrôle</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.type_controle"/></td>
+                            </tr>
+                            <tr>
+                                <td class="text-left" width="20%"><b>Contrôle</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.controle"/></td>
+                                <td class="text-left" width="20%"><b>Cause Arrêt</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.cause_arret"/></td>
+                            </tr>
+                            <tr>
+                                <td class="text-left" width="20%"><b>Commentaire</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.commentaire"/></td>
+                                <td class="text-left" width="20%"><b>Date du Contrôle</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.date_controle"/></td>
+                            </tr>
+                            <tr>
+                                <td class="text-left" width="20%"><b>Organisme contrôleur</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.organisme_controleur"/></td>
+                                <td class="text-left" width="20%"><b>Fournisseur</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.fournisseur_id.name"/></td>
+                            </tr>
+                            <tr>
+                                <td class="text-left" width="20%"><b>Etat de la conformité</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.etat_conformite"/></td>
+                                <td class="text-left" width="20%"><b>Rapport de contrôle</b></td>
+                                <td class="text-left" width="30%"><span t-field="o.rapport_de_controle"/></td>
+                            </tr>
 			            </table>
 			            <br/>
 			            <table class="table table-condensed" width="100%">
