--- a/views/report.xml
+++ b/views/report.xml
@@ -248,5 +248,23 @@
             <field name="paperformat_id" ref="is_plastigray.document_fabrication_landscape_paperformat"/>
         </record>
 
+
+
+        <report 
+            id="report_is_facture_pks"
+            model="is.facture.pk"
+            string="Facture PK"
+            report_type="qweb-pdf"
+            name="is_plastigray.report_is_facture_pk"
+            file="is_plastigray.report_is_facture_pk"
+        />
+        <record id="report_is_facture_pks" model="ir.actions.report.xml">
+            <field name="paperformat_id" ref="is_plastigray.is_facture_pk_paperformat"/>
+        </record>
+
+
+
+
+
     </data>
 </openerp>
