--- a/views/report_paperformat.xml
+++ b/views/report_paperformat.xml
@@ -259,6 +259,22 @@
         </record>
 
 
+        <record id="is_facture_pk_paperformat" model="report.paperformat">
+            <field name="name">Facture PK</field>
+            <field name="default" eval="True" />
+            <field name="format">A4</field>
+            <field name="page_height">0</field>
+            <field name="page_width">0</field>
+            <field name="orientation">Portrait</field>
+            <field name="margin_top">15</field>
+            <field name="margin_bottom">25</field>
+            <field name="margin_left">7</field>
+            <field name="margin_right">7</field>
+            <field name="header_line" eval="False" />
+            <field name="header_spacing">10</field>
+            <field name="dpi">90</field>
+        </record>
+
 
     </data>
 </openerp>
