--- a/views/report_is_facture_pk.xml
+++ b/views/report_is_facture_pk.xml
@@ -71,8 +71,10 @@
                     <table style="width:100%">
                         <tr>
                             <td class="text-left" style="width:80%">
+                                <!--
                                 S.A.S. au capital de 2 102 400 € - Siège social : ZAC de Gray Sud - CS 10133 - 70104 GRAY Cedex<br />
                                 Siret B 377 846 381 00020 - Code NAF 2229 A - Registre du Commerce GRAY - N°Identification T.V.A. FR 65 377 846 381
+                                -->
                             </td>
                             <td class="text-right">
                                 Page <span class="page" style="font-size:7pt;"/> / <span class="topage"/>
@@ -102,7 +104,7 @@
             <t t-call="is_plastigray.report_is_facture_pk_external_layout">
                 <div class="page">
                     <div class="row">
-                        <div class="col-xs-4">
+                        <div class="col-xs-6">
                             <div class="expediteur">
                                 <h2>PLASTI-KA SA</h2>
                                 <div>ZONE INDUSTRIELLE</div>
@@ -110,6 +112,9 @@
                                 <div>Tél. : 73 342 374 ; Fax : 73 342 385</div>
                                 <div>C.D. : 814756 N / N.R. ; MF : 875565/X</div>
                             </div>
+                        </div>
+                        <div class="col-xs-6 text-right">
+                            <img src='/is_plastigray/static/src/img/logo-pmn.png' style="height:15mm" />
                         </div>
                     </div>
 
@@ -224,9 +229,10 @@
                     <br/>
                     <div class="row" style="page-break-after:always;">
                         <div class="col-xs-12 text-center">
-                            Règlement : Par virement SWIFT sur le compte n° 03 507 065 0183 022016 79
-                            Banque Nationale Agricole de Kalaa KEBIRA 4060 SOUSSE TUNISIE
-                            Code SWIFT : BNTETNTT
+
+                            Règlement : par virement SWIFT sur le compte n° 7300 0080 8592 0340 0046<br/>
+                            T.I.B. : Tunis International Banq,Avenue des Etats-Unis- TUNISIE<br/>
+                            Code SWIFT : TUIBTNTT
                         </div>
                     </div>
 
@@ -236,20 +242,22 @@
                             <table class="table table-condensed" width="100%">
                                 <thead>
                                     <tr width="100%">
-                                        <th width="8%"><strong>Commande</strong></th>
+                                        <th width="7%"><strong>N°<br/>Colis</strong></th>
+                                        <th width="7%"><strong>Commande</strong></th>
                                         <th width="12%"><strong>Ref PK</strong></th>
                                         <th width="24%"><strong>Designation<br/>Origine - Nomenclature</strong></th>
-                                        <th width="8%"><strong>Poids Net</strong></th>
-                                        <th width="8%"><strong>Poids Brut</strong></th>
-                                        <th width="8%"><strong>Quantite</strong></th>
-                                        <th width="8%"><strong>P.U.M.P</strong></th>
-                                        <th width="8%"><strong>P.T.M.P</strong></th>
-                                        <th width="8%"><strong>P.U.P.F</strong></th>
+                                        <th width="7%"><strong>Poids Net</strong></th>
+                                        <th width="7%"><strong>Poids Brut</strong></th>
+                                        <th width="7%"><strong>Quantite</strong></th>
+                                        <th width="7%"><strong>P.U.M.P</strong></th>
+                                        <th width="7%"><strong>P.T.M.P</strong></th>
+                                        <th width="7%"><strong>P.U.P.F</strong></th>
                                         <th><strong>P.Total P.F.</strong></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr t-foreach="o.line_ids" t-as="l">
+                                        <td class="text-center"><span t-field="l.num_colis"/> </td>
                                         <td class="text-left">  <span t-field="l.commande"/> </td>
                                         <td class="text-left">  <span t-field="l.ref_pk"/> </td>
                                         <td class="text-left">
@@ -305,13 +313,15 @@
                                 <thead>
                                     <tr>
                                         <th><strong>Moule à taxer</strong></th>
+                                        <th><strong>Désignation</strong></th>
                                         <th><strong>Montant à taxer</strong></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr t-foreach="o.moule_ids" t-as="l">
-                                        <td><span t-field="l.mold_id"/> </td>
-                                        <td><span t-field="l.montant"/> </td>
+                                        <td class="text-left"> <span t-field="l.mold_id"/> </td>
+                                        <td class="text-left"> <span t-field="l.mold_id.designation"/> </td>
+                                        <td class="text-right"><span t-field="l.montant"/> </td>
                                     </tr>
                                 </tbody>
                             </table>
